--- a/exercises/ex0/ex0_1_python_setup.ipynb
+++ b/exercises/ex0/ex0_1_python_setup.ipynb
@@ -445,9 +445,9 @@
     "\n",
     "The Python kernel needs to be restarted before continuing. \n",
     "\n",
-    "> ![title](./images/config_001.png)\n",
+    "</br>![title](./images/config_001.png)\n",
+    "![Set user](./images/config_001.png)\n",
     "\n",
-    "</br>\n",
     "\n",
     "> **Note** This will take a couple of minutes."
    ]
@@ -479,6 +479,71 @@
     "</br>\n",
     "\n",
     "> **Note** Use your username and password supplied to logon to the SAP HANA Cloud database. Find the **host_address** in the lesson content."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load the user connection data and connect to the SAP HANA database instance\n",
+    "\n",
+    "👉🏻 **Before running the next cell** make sure:\n",
+    "\n",
+    "1. The content of the [./ex0/temp_user.ini](ex0/temp_user.ini) file is copied to a file [./ex0/user.ini](ex0/user.ini) and \n",
+    "2. the user and the password given to you by the instructor are updated in `user.ini` file \n",
+    "\n",
+    "👆🏻\n",
+    "\n",
+    "👇🏼\n",
+    "![Set user](./img/check_userini02.png)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os, sys\n",
+    "\n",
+    "file_path = './ex0/user.ini'  # Replace this with the path to your file\n",
+    "\n",
+    "if os.path.exists(file_path):\n",
+    "    print(f\"The file '{file_path}' exists.\")\n",
+    "    from hana_ml.algorithms.pal.utility import Settings\n",
+    "    myhost, myport, myuser, mypwd = Settings.load_config(file_path)\n",
+    "    if myhost == '' or myport == 0 or myuser == '' or mypwd == '':\n",
+    "        print(\"At least one required connection parameter is empty.\")\n",
+    "    else:\n",
+    "        print(f\"Connection to SAP HANA db at {myhost}:{myport} \\nwill be attempted for the user {myuser}\")\n",
+    "else:\n",
+    "    sys.exit(f\"The file '{file_path}' does not exist! Create and configure it first.\")\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f'Current time on the SAP HANA server: {myconn.sql(\"SELECT NOW() FROM DUMMY\").collect().CURRENT_TIMESTAMP[0]}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from hana_ml import dataframe as hdf\n",
+    "myconn=hdf.ConnectionContext(\n",
+    "    address=myhost, \n",
+    "    port=myport, \n",
+    "    user=myuser,\n",
+    "    password=mypwd\n",
+    ")\n",
+    "print(f\"Connected to SAP HANA db version {myconn.hana_version()} \\nat {myhost}:{myport} as user {myuser}\")"
    ]
   },
   {
