--- a/exercises/ex0/ex0_2-check_setup.ipynb
+++ b/exercises/ex0/ex0_2-check_setup.ipynb
@@ -44,12 +44,12 @@
     "👆🏻\n",
     "\n",
     "👇🏼\n",
-    "![Set user](exercise/ex0/img/check_userini02.png)"
+    "![Set user](./img/check_userini02.png)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "d94aaec7",
    "metadata": {},
    "outputs": [
@@ -66,7 +66,7 @@
    "source": [
     "import os, sys\n",
     "\n",
-    "file_path = './00-setup/user.ini'  # Replace this with the path to your file\n",
+    "file_path = './ex0/user.ini'  # Replace this with the path to your file\n",
     "\n",
     "if os.path.exists(file_path):\n",
     "    print(f\"The file '{file_path}' exists.\")\n",
@@ -114,7 +114,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(f'Current time on the SAP HANA server: {myconn.sql(\"SELECT NOW() FROM DUMMY\").collect().CURRENT_TIMESTAMP[0]}')"
+    "print(f'Current time on the SAP HANA Cloud server: {myconn.sql(\"SELECT NOW() FROM DUMMY\").collect().CURRENT_TIMESTAMP[0]}')"
    ]
   },
   {
