ex1 + ex2 drafts

--- a/exercises/ex0/ex0_2-check_setup.ipynb
+++ b/exercises/ex0/ex0_2-check_setup.ipynb
@@ -84,6 +84,28 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "e72c60b4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Loading the Python Machine Learning client library for SAP HANA and get the version\n",
+    "import hana_ml\n",
+    "#print(hana_ml.__version__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b98e5ac9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f\"SAP HANA Client for Python: {__import__(\"hana_ml\").__version__}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "442c848b-c11e-4115-89fe-7336b15681ae",
    "metadata": {},
    "outputs": [],
@@ -95,6 +117,8 @@
     "    user=myuser,\n",
     "    password=mypwd\n",
     ")\n",
+    "# Control connection\n",
+    "print('Connect to SAP HANA Cloud successful: ', myconn.connection.isconnected(), ' , with version: ', myconn.hana_version())\n",
     "print(f\"Connected to SAP HANA db version {myconn.hana_version()} \\nat {myhost}:{myport} as user {myuser}\")"
    ]
   },
