--- a/exercises/ex0/ex0_1_python_setup.ipynb
+++ b/exercises/ex0/ex0_1_python_setup.ipynb
@@ -4,19 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Introduction\n",
+    "# SAP TechEd 2025, session DA261\n",
+    "## Unlocking AI-driven insights from your business data in SAP HANA Cloud\n",
     "\n",
-    "In this use case, \n",
+    "## Exercise 0 - Getting started\n",
     "\n",
-    "## ML and Multi Model with SAP HANA Cloud\n",
-    "\n",
-    "### DA161 Hands-on ... workflow \n",
-    "\n",
-    "The ...\n",
-    "\n",
-    "### Setup and configuration\n",
+    "### SAP Business Application Studio - Python environment setup and configuration \n",
     "\n",
     "- Install required Python modules\n",
+    "- Restart Python kernel\n",
+    "- Prepare the SAP HANA Cloud connection credential file\n",
+    "- Validate SAP HANA Cloud connectivity\n",
     "\n"
    ]
   },
@@ -24,24 +22,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Setup and configuration\n",
+    "### Installation of Python modules\n",
     "\n",
+    "#### Package overview\n",
     "The following Python modules are to be installed during this hands-on introduction. \n",
     "\n",
-    "#### **hdbcli**\n",
-    "\n",
+    "__hdbcli__\n",
     "The Python Database API Specification v2.0 (PEP 249) defines a set of methods that provides a consistent database interface independent of the actual database being used. The Python extension module for SAP HANA implements PEP 249. Once you install the module, you can access and change the information in SAP HANA databases from Python.\n",
     "\n",
-    "#### **hana-ml**\n",
-    "\n",
-    "#### **Folium**\n",
-    "\n",
-    "Folium builds on the data wrangling strengths of the Python ecosystem and the mapping strengths of the Leaflet.js library. Manipulate your data in Python, then visualize it in a Leaflet map via folium.\n",
-    "\n",
+    "__hana-ml__\n",
+    "The Python Machine Learning client for SAP HANA package enables Python data scientists to access SAP HANA data using SAP HANA dataframes and utilize SAP HANA's database AI engine algorithm libraries (PAL and APL) and NLP services to build and apply machine learning models within the database natively. While scripting in python, SQL is generated on the fly and executed in the SAP HANA database. The SAP HANA dataframe is simply a SQL select statement against any data in the SAP HANA database, data is not copied into the python environment, unless explicitly collected.\n",
     "\n",
     "<br>\n",
-    "\n",
-    "> **Note:** Jupyter Notebook kernel restart required after package installation.\n",
     "\n",
     "\n",
     "</br>\n",
@@ -53,9 +45,125 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: hdbcli in c:\\users\\d059078\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (2.18.22)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 24.2 -> 25.2\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: hana-ml in c:\\users\\d059078\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (2.26.25091602)\n",
+      "Requirement already satisfied: hdbcli>=2.18.22 in c:\\users\\d059078\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from hana-ml) (2.18.22)\n",
+      "Requirement already satisfied: pydotplus in c:\\users\\d059078\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from hana-ml) (2.0.2)\n",
+      "Requirement already satisfied: Deprecated in c:\\users\\d059078\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from hana-ml) (1.2.13)\n",
+      "Requirement already satisfied: tqdm>=4.43.0 in c:\\users\\d059078\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from hana-ml) (4.64.1)\n",
+      "Requirement already satisfied: schedule in c:\\users\\d059078\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from hana-ml) (1.1.0)\n",
+      "Requirement already satisfied: prettytable in c:\\users\\d059078\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from hana-ml) (3.10.0)\n",
+      "Requirement already satisfied: shapely>=1.8.1 in c:\\users\\d059078\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from hana-ml) (2.0.4)\n",
+      "Requirement already satisfied: plotly>=4.14.3 in c:\\users\\d059078\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from hana-ml) (5.11.0)\n",
+      "Requirement already satisfied: numpy>=1.16.4 in c:\\users\\d059078\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from hana-ml) (1.23.5)\n",
+      "Requirement already satisfied: pandas>=0.24.2 in c:\\users\\d059078\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from hana-ml) (2.1.1)\n",
+      "Requirement already satisfied: jinja2>=3.0.0 in c:\\users\\d059078\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from hana-ml) (3.1.2)\n",
+      "Requirement already satisfied: MarkupSafe>=2.0 in c:\\users\\d059078\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from jinja2>=3.0.0->hana-ml) (2.1.3)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\users\\d059078\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from pandas>=0.24.2->hana-ml) (2.8.2)\n",
+      "Requirement already satisfied: pytz>=2020.1 in c:\\users\\d059078\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from pandas>=0.24.2->hana-ml) (2022.6)\n",
+      "Requirement already satisfied: tzdata>=2022.1 in c:\\users\\d059078\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from pandas>=0.24.2->hana-ml) (2023.3)\n",
+      "Requirement already satisfied: tenacity>=6.2.0 in c:\\users\\d059078\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from plotly>=4.14.3->hana-ml) (8.1.0)\n",
+      "Requirement already satisfied: colorama in c:\\users\\d059078\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from tqdm>=4.43.0->hana-ml) (0.4.6)\n",
+      "Requirement already satisfied: wrapt<2,>=1.10 in c:\\users\\d059078\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from Deprecated->hana-ml) (1.14.1)\n",
+      "Requirement already satisfied: wcwidth in c:\\users\\d059078\\appdata\\roaming\\python\\python39\\site-packages (from prettytable->hana-ml) (0.2.5)\n",
+      "Requirement already satisfied: pyparsing>=2.0.1 in c:\\users\\d059078\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from pydotplus->hana-ml) (3.0.9)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\d059078\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from python-dateutil>=2.8.2->pandas>=0.24.2->hana-ml) (1.16.0)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 24.2 -> 25.2\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: folium in c:\\users\\d059078\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (0.20.0)\n",
+      "Requirement already satisfied: branca>=0.6.0 in c:\\users\\d059078\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from folium) (0.8.1)\n",
+      "Requirement already satisfied: jinja2>=2.9 in c:\\users\\d059078\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from folium) (3.1.2)\n",
+      "Requirement already satisfied: numpy in c:\\users\\d059078\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from folium) (1.23.5)\n",
+      "Requirement already satisfied: requests in c:\\users\\d059078\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from folium) (2.32.3)\n",
+      "Requirement already satisfied: xyzservices in c:\\users\\d059078\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from folium) (2025.4.0)\n",
+      "Requirement already satisfied: MarkupSafe>=2.0 in c:\\users\\d059078\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from jinja2>=2.9->folium) (2.1.3)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\users\\d059078\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from requests->folium) (3.3.2)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\d059078\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from requests->folium) (3.7)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\users\\d059078\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from requests->folium) (2.2.1)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\d059078\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from requests->folium) (2024.6.2)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 24.2 -> 25.2\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: ipywidgets in c:\\users\\d059078\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (8.1.7)\n",
+      "Requirement already satisfied: comm>=0.1.3 in c:\\users\\d059078\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from ipywidgets) (0.2.3)\n",
+      "Requirement already satisfied: ipython>=6.1.0 in c:\\users\\d059078\\appdata\\roaming\\python\\python39\\site-packages (from ipywidgets) (8.7.0)\n",
+      "Requirement already satisfied: traitlets>=4.3.1 in c:\\users\\d059078\\appdata\\roaming\\python\\python39\\site-packages (from ipywidgets) (5.7.1)\n",
+      "Requirement already satisfied: widgetsnbextension~=4.0.14 in c:\\users\\d059078\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from ipywidgets) (4.0.14)\n",
+      "Requirement already satisfied: jupyterlab_widgets~=3.0.15 in c:\\users\\d059078\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from ipywidgets) (3.0.15)\n",
+      "Requirement already satisfied: backcall in c:\\users\\d059078\\appdata\\roaming\\python\\python39\\site-packages (from ipython>=6.1.0->ipywidgets) (0.2.0)\n",
+      "Requirement already satisfied: decorator in c:\\users\\d059078\\appdata\\roaming\\python\\python39\\site-packages (from ipython>=6.1.0->ipywidgets) (5.1.1)\n",
+      "Requirement already satisfied: jedi>=0.16 in c:\\users\\d059078\\appdata\\roaming\\python\\python39\\site-packages (from ipython>=6.1.0->ipywidgets) (0.18.2)\n",
+      "Requirement already satisfied: matplotlib-inline in c:\\users\\d059078\\appdata\\roaming\\python\\python39\\site-packages (from ipython>=6.1.0->ipywidgets) (0.1.6)\n",
+      "Requirement already satisfied: pickleshare in c:\\users\\d059078\\appdata\\roaming\\python\\python39\\site-packages (from ipython>=6.1.0->ipywidgets) (0.7.5)\n",
+      "Requirement already satisfied: prompt-toolkit<3.1.0,>=3.0.11 in c:\\users\\d059078\\appdata\\roaming\\python\\python39\\site-packages (from ipython>=6.1.0->ipywidgets) (3.0.36)\n",
+      "Requirement already satisfied: pygments>=2.4.0 in c:\\users\\d059078\\appdata\\roaming\\python\\python39\\site-packages (from ipython>=6.1.0->ipywidgets) (2.13.0)\n",
+      "Requirement already satisfied: stack-data in c:\\users\\d059078\\appdata\\roaming\\python\\python39\\site-packages (from ipython>=6.1.0->ipywidgets) (0.6.2)\n",
+      "Requirement already satisfied: colorama in c:\\users\\d059078\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from ipython>=6.1.0->ipywidgets) (0.4.6)\n",
+      "Requirement already satisfied: parso<0.9.0,>=0.8.0 in c:\\users\\d059078\\appdata\\roaming\\python\\python39\\site-packages (from jedi>=0.16->ipython>=6.1.0->ipywidgets) (0.8.3)\n",
+      "Requirement already satisfied: wcwidth in c:\\users\\d059078\\appdata\\roaming\\python\\python39\\site-packages (from prompt-toolkit<3.1.0,>=3.0.11->ipython>=6.1.0->ipywidgets) (0.2.5)\n",
+      "Requirement already satisfied: executing>=1.2.0 in c:\\users\\d059078\\appdata\\roaming\\python\\python39\\site-packages (from stack-data->ipython>=6.1.0->ipywidgets) (1.2.0)\n",
+      "Requirement already satisfied: asttokens>=2.1.0 in c:\\users\\d059078\\appdata\\roaming\\python\\python39\\site-packages (from stack-data->ipython>=6.1.0->ipywidgets) (2.2.1)\n",
+      "Requirement already satisfied: pure-eval in c:\\users\\d059078\\appdata\\roaming\\python\\python39\\site-packages (from stack-data->ipython>=6.1.0->ipywidgets) (0.2.2)\n",
+      "Requirement already satisfied: six in c:\\users\\d059078\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from asttokens>=2.1.0->stack-data->ipython>=6.1.0->ipywidgets) (1.16.0)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 24.2 -> 25.2\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
+    }
+   ],
    "source": [
     "!pip install hdbcli --break-system-packages\n",
     "!pip install hana-ml --break-system-packages\n",
@@ -70,13 +178,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Restart Python kernel\n",
+    "#### Restart Python kernel ...\n",
+    "...\n",
     "\n",
-    "The Python kernel needs to be restarted before continuing. \n",
-    "![Set user](./images/BAS_python_env_restart.png)\n",
-    "\n",
-    "\n",
-    "> **Note** This may take a minute."
+    "> **Note:** Jupyter Notebook kernel restart required after package installation."
    ]
   },
   {
@@ -88,9 +193,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### SAP HANA Cloud ...\n",
+    "#### Restart Python kernel\n",
     "\n",
-    "..."
+    "The Python kernel needs to be restarted before continuing. \n",
+    "![Set user](./images/BAS_python_env_restart.png)\n",
+    "\n",
+    "\n",
+    "> **Note** This may take a minute."
    ]
   },
   {
@@ -127,9 +236,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SystemExit",
+     "evalue": "The file './user.ini' does not exist! Create and configure it first.",
+     "output_type": "error",
+     "traceback": [
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[1;31mSystemExit\u001b[0m\u001b[1;31m:\u001b[0m The file './user.ini' does not exist! Create and configure it first.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\D059078\\AppData\\Roaming\\Python\\Python39\\site-packages\\IPython\\core\\interactiveshell.py:3441: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
+      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
+     ]
+    }
+   ],
    "source": [
     "import os, sys\n",
     "\n",
