image updates ex0

--- a/exercises/ex0/ex0_1_python_setup.ipynb
+++ b/exercises/ex0/ex0_1_python_setup.ipynb
@@ -28,142 +28,30 @@
     "The following Python modules are to be installed during this hands-on introduction. \n",
     "\n",
     "__hdbcli__\n",
-    "The Python Database API Specification v2.0 (PEP 249) defines a set of methods that provides a consistent database interface independent of the actual database being used. The Python extension module for SAP HANA implements PEP 249. Once you install the module, you can access and change the information in SAP HANA databases from Python.\n",
+    "The Python Database API Specification v2.0 (PEP 249) defines a set of methods that provides a consistent database interface independent of the actual database being used. The Python extension module for SAP HANA implements PEP 249. Once you install the module, you can access and change the information in SAP HANA databases from Python.  \n",
+    "You can find the documentation at https://help.sap.com/docs/SAP_HANA_CLIENT/f1b440ded6144a54ada97ff95dac7adf/f3b8fabf34324302b123297cdbe710f0.html  \n",
+    "You can find the package at https://pypi.org/project/hdbcli/  \n",
     "\n",
     "__hana-ml__\n",
-    "The Python Machine Learning client for SAP HANA package enables Python data scientists to access SAP HANA data using SAP HANA dataframes and utilize SAP HANA's database AI engine algorithm libraries (PAL and APL) and NLP services to build and apply machine learning models within the database natively. While scripting in python, SQL is generated on the fly and executed in the SAP HANA database. The SAP HANA dataframe is simply a SQL select statement against any data in the SAP HANA database, data is not copied into the python environment, unless explicitly collected.\n",
-    "\n",
-    "<br>\n",
+    "The Python Machine Learning client for SAP HANA package enables Python data scientists to access SAP HANA data using SAP HANA dataframes and utilize SAP HANA's database AI engine algorithm libraries (PAL and APL) and NLP services to build and apply machine learning models within the database natively. While scripting in python, SQL is generated on the fly and executed in the SAP HANA database. The SAP HANA dataframe is simply a SQL select statement against any data in the SAP HANA database, data is not copied into the python environment, unless explicitly collected.  \n",
+    "You can find the documentation at: https://help.sap.com/doc/cd94b08fe2e041c2ba778374572ddba9/latest/en-US/hana_ml.html   \n",
+    "You can find the package at https://pypi.org/project/hana-ml/  \n",
     "\n",
     "\n",
     "</br>\n",
     "\n",
     "#### Install Python packages\n",
     "\n",
-    "Run the following package installations. **pip** is the package installer for Python. You can use pip to install packages from the Python Package Index and other indexes."
+    "Run the following package installations. \n",
+    "- **pip** is the package installer for Python. \n",
+    "- You can use pip to install packages from the Python Package Index and other indexes."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: hdbcli in c:\\users\\d059078\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (2.18.22)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "[notice] A new release of pip is available: 24.2 -> 25.2\n",
-      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: hana-ml in c:\\users\\d059078\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (2.26.25091602)\n",
-      "Requirement already satisfied: hdbcli>=2.18.22 in c:\\users\\d059078\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from hana-ml) (2.18.22)\n",
-      "Requirement already satisfied: pydotplus in c:\\users\\d059078\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from hana-ml) (2.0.2)\n",
-      "Requirement already satisfied: Deprecated in c:\\users\\d059078\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from hana-ml) (1.2.13)\n",
-      "Requirement already satisfied: tqdm>=4.43.0 in c:\\users\\d059078\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from hana-ml) (4.64.1)\n",
-      "Requirement already satisfied: schedule in c:\\users\\d059078\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from hana-ml) (1.1.0)\n",
-      "Requirement already satisfied: prettytable in c:\\users\\d059078\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from hana-ml) (3.10.0)\n",
-      "Requirement already satisfied: shapely>=1.8.1 in c:\\users\\d059078\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from hana-ml) (2.0.4)\n",
-      "Requirement already satisfied: plotly>=4.14.3 in c:\\users\\d059078\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from hana-ml) (5.11.0)\n",
-      "Requirement already satisfied: numpy>=1.16.4 in c:\\users\\d059078\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from hana-ml) (1.23.5)\n",
-      "Requirement already satisfied: pandas>=0.24.2 in c:\\users\\d059078\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from hana-ml) (2.1.1)\n",
-      "Requirement already satisfied: jinja2>=3.0.0 in c:\\users\\d059078\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from hana-ml) (3.1.2)\n",
-      "Requirement already satisfied: MarkupSafe>=2.0 in c:\\users\\d059078\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from jinja2>=3.0.0->hana-ml) (2.1.3)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\users\\d059078\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from pandas>=0.24.2->hana-ml) (2.8.2)\n",
-      "Requirement already satisfied: pytz>=2020.1 in c:\\users\\d059078\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from pandas>=0.24.2->hana-ml) (2022.6)\n",
-      "Requirement already satisfied: tzdata>=2022.1 in c:\\users\\d059078\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from pandas>=0.24.2->hana-ml) (2023.3)\n",
-      "Requirement already satisfied: tenacity>=6.2.0 in c:\\users\\d059078\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from plotly>=4.14.3->hana-ml) (8.1.0)\n",
-      "Requirement already satisfied: colorama in c:\\users\\d059078\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from tqdm>=4.43.0->hana-ml) (0.4.6)\n",
-      "Requirement already satisfied: wrapt<2,>=1.10 in c:\\users\\d059078\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from Deprecated->hana-ml) (1.14.1)\n",
-      "Requirement already satisfied: wcwidth in c:\\users\\d059078\\appdata\\roaming\\python\\python39\\site-packages (from prettytable->hana-ml) (0.2.5)\n",
-      "Requirement already satisfied: pyparsing>=2.0.1 in c:\\users\\d059078\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from pydotplus->hana-ml) (3.0.9)\n",
-      "Requirement already satisfied: six>=1.5 in c:\\users\\d059078\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from python-dateutil>=2.8.2->pandas>=0.24.2->hana-ml) (1.16.0)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "[notice] A new release of pip is available: 24.2 -> 25.2\n",
-      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: folium in c:\\users\\d059078\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (0.20.0)\n",
-      "Requirement already satisfied: branca>=0.6.0 in c:\\users\\d059078\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from folium) (0.8.1)\n",
-      "Requirement already satisfied: jinja2>=2.9 in c:\\users\\d059078\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from folium) (3.1.2)\n",
-      "Requirement already satisfied: numpy in c:\\users\\d059078\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from folium) (1.23.5)\n",
-      "Requirement already satisfied: requests in c:\\users\\d059078\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from folium) (2.32.3)\n",
-      "Requirement already satisfied: xyzservices in c:\\users\\d059078\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from folium) (2025.4.0)\n",
-      "Requirement already satisfied: MarkupSafe>=2.0 in c:\\users\\d059078\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from jinja2>=2.9->folium) (2.1.3)\n",
-      "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\users\\d059078\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from requests->folium) (3.3.2)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\d059078\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from requests->folium) (3.7)\n",
-      "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\users\\d059078\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from requests->folium) (2.2.1)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\d059078\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from requests->folium) (2024.6.2)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "[notice] A new release of pip is available: 24.2 -> 25.2\n",
-      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: ipywidgets in c:\\users\\d059078\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (8.1.7)\n",
-      "Requirement already satisfied: comm>=0.1.3 in c:\\users\\d059078\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from ipywidgets) (0.2.3)\n",
-      "Requirement already satisfied: ipython>=6.1.0 in c:\\users\\d059078\\appdata\\roaming\\python\\python39\\site-packages (from ipywidgets) (8.7.0)\n",
-      "Requirement already satisfied: traitlets>=4.3.1 in c:\\users\\d059078\\appdata\\roaming\\python\\python39\\site-packages (from ipywidgets) (5.7.1)\n",
-      "Requirement already satisfied: widgetsnbextension~=4.0.14 in c:\\users\\d059078\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from ipywidgets) (4.0.14)\n",
-      "Requirement already satisfied: jupyterlab_widgets~=3.0.15 in c:\\users\\d059078\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from ipywidgets) (3.0.15)\n",
-      "Requirement already satisfied: backcall in c:\\users\\d059078\\appdata\\roaming\\python\\python39\\site-packages (from ipython>=6.1.0->ipywidgets) (0.2.0)\n",
-      "Requirement already satisfied: decorator in c:\\users\\d059078\\appdata\\roaming\\python\\python39\\site-packages (from ipython>=6.1.0->ipywidgets) (5.1.1)\n",
-      "Requirement already satisfied: jedi>=0.16 in c:\\users\\d059078\\appdata\\roaming\\python\\python39\\site-packages (from ipython>=6.1.0->ipywidgets) (0.18.2)\n",
-      "Requirement already satisfied: matplotlib-inline in c:\\users\\d059078\\appdata\\roaming\\python\\python39\\site-packages (from ipython>=6.1.0->ipywidgets) (0.1.6)\n",
-      "Requirement already satisfied: pickleshare in c:\\users\\d059078\\appdata\\roaming\\python\\python39\\site-packages (from ipython>=6.1.0->ipywidgets) (0.7.5)\n",
-      "Requirement already satisfied: prompt-toolkit<3.1.0,>=3.0.11 in c:\\users\\d059078\\appdata\\roaming\\python\\python39\\site-packages (from ipython>=6.1.0->ipywidgets) (3.0.36)\n",
-      "Requirement already satisfied: pygments>=2.4.0 in c:\\users\\d059078\\appdata\\roaming\\python\\python39\\site-packages (from ipython>=6.1.0->ipywidgets) (2.13.0)\n",
-      "Requirement already satisfied: stack-data in c:\\users\\d059078\\appdata\\roaming\\python\\python39\\site-packages (from ipython>=6.1.0->ipywidgets) (0.6.2)\n",
-      "Requirement already satisfied: colorama in c:\\users\\d059078\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from ipython>=6.1.0->ipywidgets) (0.4.6)\n",
-      "Requirement already satisfied: parso<0.9.0,>=0.8.0 in c:\\users\\d059078\\appdata\\roaming\\python\\python39\\site-packages (from jedi>=0.16->ipython>=6.1.0->ipywidgets) (0.8.3)\n",
-      "Requirement already satisfied: wcwidth in c:\\users\\d059078\\appdata\\roaming\\python\\python39\\site-packages (from prompt-toolkit<3.1.0,>=3.0.11->ipython>=6.1.0->ipywidgets) (0.2.5)\n",
-      "Requirement already satisfied: executing>=1.2.0 in c:\\users\\d059078\\appdata\\roaming\\python\\python39\\site-packages (from stack-data->ipython>=6.1.0->ipywidgets) (1.2.0)\n",
-      "Requirement already satisfied: asttokens>=2.1.0 in c:\\users\\d059078\\appdata\\roaming\\python\\python39\\site-packages (from stack-data->ipython>=6.1.0->ipywidgets) (2.2.1)\n",
-      "Requirement already satisfied: pure-eval in c:\\users\\d059078\\appdata\\roaming\\python\\python39\\site-packages (from stack-data->ipython>=6.1.0->ipywidgets) (0.2.2)\n",
-      "Requirement already satisfied: six in c:\\users\\d059078\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from asttokens>=2.1.0->stack-data->ipython>=6.1.0->ipywidgets) (1.16.0)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "[notice] A new release of pip is available: 24.2 -> 25.2\n",
-      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!pip install hdbcli --break-system-packages\n",
     "!pip install hana-ml --break-system-packages\n",
@@ -179,24 +67,14 @@
    "metadata": {},
    "source": [
     "#### Restart Python kernel ...\n",
-    "...\n",
     "\n",
-    "> **Note:** Jupyter Notebook kernel restart required after package installation."
+    "The Python kernel to be used with the Jupyter Notebook requires now a restart after package installation."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "#### Restart Python kernel\n",
-    "\n",
-    "The Python kernel needs to be restarted before continuing. \n",
-    "![Set user](./images/BAS_python_env_restart.png)\n",
     "\n",
     "\n",
     "> **Note** This may take a minute."
@@ -221,7 +99,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Load the user connection data and connect to the SAP HANA database instance\n",
+    "### Prepare the SAP HANA Cloud connection credential file\n",
+    "\n",
+    "The Python script further below, get used to connect this Python environment to the SAP HANA Cloud instance.  \n",
+    "The script\n",
+    "- first imports database connection modules \n",
+    "- then initiates a connection using the connection details provided in a local file (user.ini)\n",
+    "- the script is reused for creating the connection from python to SAP HANA Cloud in each exercise\n",
+    "- Alternatively, the user would be prompted to enter hostname, their username and password, which are then used to establish a secure connection to the SAP HANA Cloud database. \n",
+    "\n",
+    "</br>\n",
+    "\n",
+    "**Note** Use your username and password supplied by the session instructor to logon to the SAP HANA Cloud database.   \n",
+    "Find the **host_address** in the lesson content  __temp_user.ini__ file.\n",
+    "\n",
+    "</br>\n",
     "\n",
     "👉🏻 **Before running the next cell** make sure:\n",
     "\n",
@@ -236,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -246,14 +138,6 @@
      "traceback": [
       "An exception has occurred, use %tb to see the full traceback.\n",
       "\u001b[1;31mSystemExit\u001b[0m\u001b[1;31m:\u001b[0m The file './user.ini' does not exist! Create and configure it first.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\D059078\\AppData\\Roaming\\Python\\Python39\\site-packages\\IPython\\core\\interactiveshell.py:3441: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
-      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
      ]
     }
    ],
