--- a/exercises/ex0/ex0_2-check_setup.ipynb
+++ b/exercises/ex0/ex0_2-check_setup.ipynb
@@ -147,10 +147,7 @@
    "id": "9bfd54f6",
    "metadata": {},
    "source": [
-    "🤓 **Let's discuss**:\n",
-    "1. SAP HANA Client: https://help.sap.com/docs/SAP_HANA_CLIENT\n",
-    "1. SAP HANA Client's Python driver: https://help.sap.com/docs/SAP_HANA_CLIENT/f1b440ded6144a54ada97ff95dac7adf/f3b8fabf34324302b123297cdbe710f0.html\n",
-    "1. Python Machine Learning Client for SAP HANA: https://help.sap.com/doc/cd94b08fe2e041c2ba778374572ddba9/latest/en-US/hana_ml.html "
+    "🤓 **Let's discuss**:"
    ]
   }
  ],
